--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,18 @@
 			<artifactId>testng</artifactId>
 			<version>7.10.2</version>
 		</dependency>
-
-
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.25.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>2.25.2</version>
+		</dependency>
 	</dependencies>
+	
+	
+	
 </project>
